Update final version